k8s-manifests/02-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-api-service
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: hashicorp/http-echo
        args:
          - "-text=This is the BACKEND API"
          - "-listen=:8080"
        ports:
        - containerPort: 8080
          protocol: TCP
